I fixed an error on the quick view button on mobile

--- a/assets/sca-quick-view.css
+++ b/assets/sca-quick-view.css
@@ -237,9 +237,10 @@ input.disabled.sca-qv-cartbtn:hover {
     z-index: 70999 !important;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 991.98px) {  
   .sca-qv-image .sca-qv-button {
-    display: none !important;
+    /*display: none !important;*/
+    visibility: hidden !important;
   }
 }
 
